--- a/index.html
+++ b/index.html
@@ -21,7 +21,19 @@
     </header>
 
     <main>
-
+        <section id="boxes">
+            <div class="container">
+                <div class="row">
+                    <div class="box">
+                        <div class="minibox primary">1</div>
+                        <div class="minibox">2</div>
+                        <div class="minibox secondary">3</div>
+                        <div class="minibox">4</div>
+                        <div class="minibox">5</div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 
     <footer>
